# CJOPROO

ControleDeEstoque/: CMakeLists.txt  cadastroproduto.cpp  cadastroproduto.h  cadastroproduto.ui  cadastrousuario.cpp  cadastrousuario.h  cadastrousuario.ui  controleestoque.cpp  controleestoque.h  controleestoque.ui  detalhesproduto.cpp  detalhesproduto.h  detalhesproduto.ui  editarproduto.cpp  editarproduto.h  editarproduto.ui  listagemprodutos.cpp  listagemprodutos.h  listagemprodutos.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menumainwindow.cpp  menumainwindow.h  menumainwindow.ui  resources.qrc
StreetRacing/: recordes.txt
StreetRacing/src/: gerador_inimigos.cpp  gerador_inimigos.hpp  inimigo.cpp  inimigo.hpp  jogador.cpp  jogador.hpp  main.cpp
